--- a/settings.gradle
+++ b/settings.gradle
@@ -9,6 +9,5 @@ rootProject.name = "apized"
 include 'core', 'distributed-lock', 'test', 'tracing',
   'micronaut:micronaut-core', 'micronaut:micronaut-distributed-lock', 'micronaut:micronaut-test', 'micronaut:micronaut-tracing', 'micronaut:micronaut-messaging-rabbitmq',
   'spring:spring-core', 'spring:spring-distributed-lock', 'spring:spring-test', 'spring:spring-tracing',
-  'micronaut:micronaut-gradle-plugin', 'spring:spring-gradle-plugin',
-  'micronaut:micronaut-sample-server'
+  'micronaut:micronaut-gradle-plugin', 'spring:spring-gradle-plugin'
 
