--- a/micronaut/micronaut-test/build.gradle
+++ b/micronaut/micronaut-test/build.gradle
@@ -3,7 +3,7 @@ plugins {
 }
 
 dependencies {
-  compileOnly project(":micronaut:micronaut-core")
+  compileOnly project(":core")
   api project(":test")
 
   api "io.micronaut:micronaut-inject-groovy"
@@ -11,4 +11,6 @@ dependencies {
   api "io.micronaut:micronaut-context"
   api "io.micronaut.test:micronaut-test-junit5"
   api "io.micronaut:micronaut-http-server-netty"
+
+  compileOnly 'io.micronaut.serde:micronaut-serde-jackson'
 }
